# mcfn

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cross-build.yml
examples/: accepted.file.extension.mcfunction  declare.mcfn  declare.mcfunction  if.mcfn  if.mcfunction  include.mcfn  include.mcfunction  include_me.in  invalid.mcfn  proc.mcfn  proc.mcfunction  switch.mcfn  switch.mcfunction  tranptime.mcfn  tranptime.mcfunction  with.mcfn  with.mcfunction
src/: cli.rs  errors.rs  macros.rs  main.rs  parser.rs  status.rs
