[package]
name = "mcfn"
version = "0.0.1"
authors = ["Jonas da Silva"]
edition = "2021"
description = "An mcfunction preprocessor"
repository = "https://github.com/allay-mc/mcfn"
license = "MIT"
keywords = ["minecraft", "bedrock", "mcfunction", "development", "preprocessor"]
categories = ["command-line-utilities", "compilers", "development-tools", "parser-implementations"]

[dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
termstatus = "0.2.0"
thiserror = "1.0.50"
